test/files/pos/attachments-typed-another-ident/Macros_Test_2.scala
// scalac: -language:experimental.macros
object Test extends App {
  def bar = 2
  Macros.foo
}

