test/files/neg/macro-invalidusage-nontypeable/Test_2.scala
// scalac: -language:experimental.macros
object Test extends App {
  Macros.foo
}
